modelo de index

--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@
 
 <!-- SECCION DE LIBROS RECOMENDADOS -->
 <div id="librorec" class="ancla">
-<section id="recomendados" class="p-2">
+<section id="recomendados">
   <div class="container">
     <h2 id="txt" class="border-bottom text-center mt-3 mb-4">
      Recomendados
     </h2>
-    <div class="row">
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+     <div class="row d-flex justify-content-center">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
         <div class="card">
-          <img src="images/rec-2.jpg" class="card-img-top" alt="">
+          <img src="images/rec-2.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h5>Lorem</h5>
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -251,9 +251,9 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
         <div class="card">
-          <img src="images/rec-4.png" class="card-img-top" alt="">
+          <img src="images/rec-4.png" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h5>Lorem</h5>
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -269,7 +269,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
         <div class="card">
           <img src="images/rec-3.png" class="card-img-top" alt="">
           <div class="card-body">
@@ -287,7 +287,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
         <div class="card">
           <img src="images/rec-1.png" class="card-img-top" alt="">
           <div class="card-body">
@@ -316,8 +316,8 @@
   <h2 id="txt" class="border-bottom text-center mt-1 mb-4">
     Novedades
    </h2>
-   <div class="row">
-    <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+   <div class="row d-flex justify-content-center">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
       <div class="card">
         <img src="images/rec-2.jpg" class="card-img-top" alt="">
         <div class="card-body">
@@ -335,7 +335,7 @@
         </div>
       </div>
     </div>
-    <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
       <div class="card">
         <img src="images/rec-4.png" class="card-img-top" alt="">
         <div class="card-body">
@@ -353,7 +353,7 @@
         </div>
       </div>
     </div>
-    <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
       <div class="card">
         <img src="images/rec-3.png" class="card-img-top" alt="">
         <div class="card-body">
@@ -371,7 +371,7 @@
         </div>
       </div>
     </div>
-    <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
       <div class="card">
         <img src="images/rec-1.png" class="card-img-top" alt="">
         <div class="card-body">
