añadido logo y arreglado cards

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/icono.png">
      <!-- Bootstrap -->
      <link
      rel="stylesheet"
@@ -13,7 +14,7 @@
    />
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Libreria Bradbury</title>
 </head>
 <body id="body">
     <!-- COMIENZO DEL HEADER Y NAVBAR -->
@@ -21,9 +22,7 @@
       <div id="inicio">
         <nav class="navbar navbar-expand-lg navbar-dark bg-1">
           <a class="navbar-brand" href="index.html">
-            <div class="row m-0 align-items-center">
-              <h2 class="m-0 ml-2">Logo Bradbury</h2>
-            </div>
+            <img src="images/logo.png" alt="Logo Bradbury">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -227,15 +226,17 @@
 
 <!-- SECCION DE LIBROS RECOMENDADOS -->
 <div id="librorec" class="ancla">
-<section id="recomendados">
+<section id="cardslibros">
   <div class="container">
     <h2 id="txt" class="border-bottom text-center mt-3 mb-4">
      Recomendados
     </h2>
      <div class="row d-flex justify-content-center">
-      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
         <div class="card">
-          <img src="images/rec-2.jpg" class="card-img-top img-fluid" alt="">
+          <div class="text-center zoom">
+          <img src="images/rec-2.jpg" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="150px" alt="">
+        </div>
           <div class="card-body">
             <h5>Lorem</h5>
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -251,9 +252,11 @@
           </div>
         </div>
       </div>
-      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
         <div class="card">
-          <img src="images/rec-4.png" class="card-img-top img-fluid" alt="">
+          <div class="text-center zoom">
+            <img src="images/rec-4.png" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="150px" alt="">
+          </div>
           <div class="card-body">
             <h5>Lorem</h5>
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -269,9 +272,11 @@
           </div>
         </div>
       </div>
-      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
         <div class="card">
-          <img src="images/rec-3.png" class="card-img-top" alt="">
+          <div class="text-center zoom">
+            <img src="images/rec-3.png" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="143px" alt="">
+          </div>
           <div class="card-body">
             <h5>Lorem</h5>
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -287,9 +292,11 @@
           </div>
         </div>
       </div>
-      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+      <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
         <div class="card">
-          <img src="images/rec-1.png" class="card-img-top" alt="">
+          <div class="text-center zoom">
+            <img src="images/rec-1.png" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="150px" alt="">
+          </div>
           <div class="card-body">
             <h5>Lorem</h5>
             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -311,15 +318,17 @@
 </div>
 <!-- SECCION DE LIBROS NOVEDADES -->
 <div id="libronov" class="ancla">
-<section id="recomendados" class="p-2 mb-3">
+<section id="cardslibros" class="p-2 mb-3">
 <div class="container">
   <h2 id="txt" class="border-bottom text-center mt-1 mb-4">
     Novedades
    </h2>
    <div class="row d-flex justify-content-center">
-    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
       <div class="card">
-        <img src="images/rec-2.jpg" class="card-img-top" alt="">
+        <div class="text-center zoom">
+        <img src="images/rec-2.jpg" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="150px" alt="">
+      </div>
         <div class="card-body">
           <h5>Lorem</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -335,9 +344,11 @@
         </div>
       </div>
     </div>
-    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
       <div class="card">
-        <img src="images/rec-4.png" class="card-img-top" alt="">
+        <div class="text-center zoom">
+          <img src="images/rec-4.png" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="150px" alt="">
+        </div>
         <div class="card-body">
           <h5>Lorem</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -353,9 +364,11 @@
         </div>
       </div>
     </div>
-    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
       <div class="card">
-        <img src="images/rec-3.png" class="card-img-top" alt="">
+        <div class="text-center zoom">
+          <img src="images/rec-3.png" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="143px" alt="">
+        </div>
         <div class="card-body">
           <h5>Lorem</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
@@ -371,9 +384,11 @@
         </div>
       </div>
     </div>
-    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3">
+    <div class="col-10 col-sm-6 col-md-4 col-lg-3 mb-3 mt-4">
       <div class="card">
-        <img src="images/rec-1.png" class="card-img-top" alt="">
+        <div class="text-center zoom">
+          <img src="images/rec-1.png" class="img-fluid rounded img-thumbnail imagenalto" height="130px" width="150px" alt="">
+        </div>
         <div class="card-body">
           <h5>Lorem</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, perspiciatis.</p>
