--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     crossorigin="anonymous"
   ></script>
   <script src="carrito.js"></script>
-  <script src="usuarios.js"></script>
+  <script src="registrarse.js"></script>
 
 </body>
 
