agregado modal carrito

--- a/admin.html
+++ b/admin.html
@@ -26,10 +26,10 @@
               <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="index.html">Inicio</a>
+                  <a class="nav-link text-white" href="LogUsuario.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="index.html">ABM</a>
+                    <a class="nav-link text-white" href="#">ABM</a>
                   </li>
                
                 </li>
