--- a/html/admin.html
+++ b/html/admin.html
@@ -8,8 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/images/icono.png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/icono.png">
     <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.css">
     <title>| Admin</title>
 </head>
@@ -18,8 +18,8 @@
     <header>
         <div id="inicio">
           <nav class="navbar navbar-expand-lg navbar-dark bg-1">
-            <a class="navbar-brand" href="/index.html" target="_blank">
-              <img src="/images/logo.png" alt="Logo Bradbury">
+            <a class="navbar-brand" href="../index.html" target="_blank">
+              <img src="../images/logo.png" alt="Logo Bradbury">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -83,9 +83,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="/JS/usuarios.js"></script>
-    <script src="/JS/admin.js"></script>
-    <script src="/JS/abmLibros.js"></script>
+    <script src="../JS/usuarios.js"></script>
+    <script src="../JS/admin.js"></script>
+    <script src="../JS/abmLibros.js"></script>
     
 </body>
 
